# emotional-n-back

./: .tool-versions  CONTRIBUTING.md  Makefile  README.md  TODO.md  pyproject.toml
data/: .gitignore
data/text/en/: sample1.txt  sample2.txt
data/text/swe/: 250928_genz_stare.txt  250928_maria_117.txt  250928_ultra_running.txt  250929_young_tracking.txt  251001_greta_israel.txt
src/emotional_n_back/: __init__.py  constants.py  data.py  eeg_stroop.py  game.py  main.py  nback.py  speed_reading.py  stroop.py
src/emotional_n_back/eeg/: eeg_generator_morph_bursts.py  erp.py  stream_erp_reader.py
src/emotional_n_back/streaming/: base.py  dummy.py  eeg.py
tests/: test_nback.py
