[project]
name = "emotional-n-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul Vinell", email = "paul.vinell@hemnet.se" }
]
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=0.3.12",
    "numpy>=2.3.2",
    "pygame>=2.6.1",
    "python-osc>=1.9.3",
    "typer>=0.16.1",
    "matplotlib>=3.9.2",
    "mne>=1.10.1",
]

[project.scripts]
nback = "emotional_n_back.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
